welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono3:1: error: expected start of definition
override def run() {
         ^PictureMono3:4: error: expected class or object definition
def marquer() {
^PictureMono3:8: error: expected class or object definition
def faireV() {
^PictureMono3:26: error: expected class or object definition
def fairemotif() {
^